--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@nivo/core": "^0.69.0",
     "@nivo/line": "^0.69.1",
     "@testing-library/jest-dom": "^5.12.0",
