--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "^17.0.5",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.16.0",
     "react-router-dom": "^5.2.0",
